--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -9,3 +9,12 @@
 .C1{
      background-color: #6B66E0;
 }
+.C2{
+    background-color: #AF5555;
+}
+.C3{
+    background-color: #7AF470;
+}
+.C4{
+    background-color: #4AE6DA;
+}
